--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,14 @@ jobs:
       with:
         go-version: 1.19
 
-   # - name: Build
-   #   run: go build -v ./...
+    - name: Install dependencies
+      run: |
+        go mod tidy
+        go get .
+        go get fyne.io/fyne/v2@latest
+  
+    - name: Build
+      run:  go build -v ./...
 
     - name: Test
       run: go test -v ./...
