--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,33 +1,36 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+name: Static Analysis
+on: [push, pull_request]
 
 jobs:
-
-  build:
+  checks:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - uses: actions/checkout@v2
+    - uses: WillAbides/setup-go-faster@v1.6.0
       with:
-        go-version: 1.19
+        go-version: '1.16.x'     
 
-    - name: Install dependencies
+    - name: Get dependencies
       run: |
-        go get .
-        go get fyne.io/fyne/v2@latest
-  
-    - name: Build
-      run:  go build -v ./...
+        sudo apt-get update && sudo apt-get install gcc libgl1-mesa-dev libegl1-mesa-dev libgles2-mesa-dev libx11-dev xorg-dev
+        go install golang.org/x/tools/cmd/goimports@latest
+        go install github.com/fzipp/gocyclo/cmd/gocyclo@latest
+        go install golang.org/x/lint/golint@latest
+        go install honnef.co/go/tools/cmd/staticcheck@v0.2.1
+    - name: Cleanup repository
+      run: rm -rf vendor/
 
-    - name: Test
-      run: go test -v ./...
+    - name: Vet
+      run: go vet -tags ci ./...
+
+    - name: Goimports
+      run: test -z $(goimports -e -d . | tee /dev/stderr)
+
+    - name: Gocyclo
+      run: gocyclo -over 30 .
+
+    - name: Golint
+      run: golint -set_exit_status $(go list -tags ci ./...)
+
+    - name: Staticcheck
+      run: staticcheck -go 1.14 ./...
